@@ -28,7 +28,6 @@ Categorized error messages
 @GST_CORE_ERROR_STATE_CHANGE: 
 @GST_CORE_ERROR_PAD: 
 @GST_CORE_ERROR_THREAD: 
-@GST_CORE_ERROR_SCHEDULER: 
 @GST_CORE_ERROR_NEGOTIATION: 
 @GST_CORE_ERROR_EVENT: 
 @GST_CORE_ERROR_SEEK: 
