@@ -17,56 +17,3 @@ This is a base class for custom schedulers.
 <!-- ##### SECTION Stability_Level ##### -->
 
 
-<!-- ##### STRUCT GstScheduler ##### -->
-<para>
-
-</para>
-
-
-<!-- ##### ENUM GstSchedulerFlags ##### -->
-<para>
-Flags for the scheduler
-</para>
-
-@GST_SCHEDULER_FLAG_LAST: subclasses can start numbering their flags starting
-                          from here.
-
-<!-- ##### MACRO GST_SCHEDULER_PARENT ##### -->
-<para>
-Get the parent object of this scheduler.
-</para>
-
-@sched: the scheduler to get the parent of.
-
-
-<!-- ##### MACRO GST_SCHEDULER_STATE ##### -->
-<para>
-Get the state of the scheduler.
-</para>
-
-@sched: the scheduler to get the state of.
-
-
-<!-- ##### FUNCTION gst_scheduler_setup ##### -->
-<para>
-
-</para>
-
-@sched: 
-
-
-<!-- ##### FUNCTION gst_scheduler_reset ##### -->
-<para>
-
-</para>
-
-@sched: 
-
-
-<!-- ##### MACRO GST_SCHEDULER_DEFAULT_NAME ##### -->
-<para>
-
-</para>
-
-
-
