@@ -34,85 +34,3 @@ Use gst_scheduler_factory_destroy() to remove the factory from the global list.
 <!-- ##### SECTION Stability_Level ##### -->
 
 
-<!-- ##### STRUCT GstSchedulerFactory ##### -->
-<para>
-
-</para>
-
-
-<!-- ##### FUNCTION gst_scheduler_register ##### -->
-<para>
-
-</para>
-
-@plugin: 
-@name: 
-@longdesc: 
-@type: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gst_scheduler_factory_new ##### -->
-<para>
-
-</para>
-
-@name: 
-@longdesc: 
-@type: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gst_scheduler_factory_destroy ##### -->
-<para>
-
-</para>
-
-@factory: 
-
-
-<!-- ##### FUNCTION gst_scheduler_factory_find ##### -->
-<para>
-
-</para>
-
-@name: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gst_scheduler_factory_create ##### -->
-<para>
-
-</para>
-
-@factory: 
-@parent: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gst_scheduler_factory_make ##### -->
-<para>
-
-</para>
-
-@name: 
-@parent: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gst_scheduler_factory_set_default_name ##### -->
-<para>
-
-</para>
-
-@name: 
-
-
-<!-- ##### FUNCTION gst_scheduler_factory_get_default_name ##### -->
-<para>
-
-</para>
-
-@Returns: 
-
-
